--- a/index.html
+++ b/index.html
@@ -116,7 +116,6 @@
   <header>
     <div>
       <h1>Simulador de Recarga NFC - Mexibús (Prototipo)</h1>
-      <p class="lead">Simula tocar la tarjeta NFC con el celular para recargar y descontar saldo del "monedero" del usuario.</p>
     </div>
   </header>
 
@@ -160,7 +159,6 @@
           <strong>Instrucciones rápidas</strong>
           <ul class="list">
             <li>Ingresa el monto a recargar.</li>
-            <li>Pulsa "Simular acercar tarjeta" para emular el tap.</li>
             <li>Verifica que el saldo de la tarjeta aumente y el monedero disminuya.</li>
           </ul>
         </div>
@@ -173,7 +171,7 @@
   </div>
 
   <footer>
-    Prototipo para demostración — no realiza transacciones reales. Guarda este archivo y ábrelo en tu navegador.
+    Prototipo para demostración — no realiza transacciones reales.
   </footer>
 </div>
 
